# tcp_sevr

./: .clangd  CMakeLists.txt  README.md
include/: error.h  http_server.h  response.h  routes.h  tcp_socket.h
src/: CMakeLists.txt  http_server.cc  response.cc  run.cc  tcp_socket.cc
static/: index.css
templates/: 404.html  about.html  index.html
